--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.1.1",
     "typescript": "^4.9.4"
+  },
+  "scripts": {
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts"
   }
 }
