--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^18.11.11",
+    "@typescript-eslint/eslint-plugin": "^5.45.1",
+    "@typescript-eslint/parser": "^5.45.1",
+    "eslint": "^8.29.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.1.1",
     "typescript": "^4.9.4"
