--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
-  "name": "api-vendas",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.14",
-    "@types/node": "^18.11.11",
-    "@typescript-eslint/eslint-plugin": "^5.45.1",
-    "@typescript-eslint/parser": "^5.45.1",
-    "eslint": "^8.29.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.1",
-    "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.1.1",
-    "typescript": "^4.9.4"
-  },
-  "scripts": {
-    "dev": "ts-node-dev -r tsconfig-paths/register  --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts",
-    "lint": "eslint . --ext .ts",
-    "lint-fix": "eslint . --ext .ts --fix"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "express-async-errors": "^3.1.1",
-    "pg": "^8.8.0",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.11"
-  }
+   "name": "api-vendas",
+   "version": "1.0.0",
+   "main": "index.js",
+   "license": "MIT",
+   "devDependencies": {
+      "@types/cors": "^2.8.13",
+      "@types/express": "^4.17.14",
+      "@types/node": "^16.11.10",
+      "@typescript-eslint/eslint-plugin": "^5.45.1",
+      "@typescript-eslint/parser": "^5.45.1",
+      "eslint": "^8.29.0",
+      "eslint-config-prettier": "^8.5.0",
+      "eslint-plugin-prettier": "^4.2.1",
+      "prettier": "^2.8.1",
+      "ts-node-dev": "^2.0.0",
+      "tsconfig-paths": "^4.1.1",
+      "typescript": "4.5.2",
+      "ts-node": "10.7.0"
+   },
+   "scripts": {
+      "dev": "ts-node-dev -r tsconfig-paths/register  --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts",
+      "lint": "eslint . --ext .ts",
+      "lint-fix": "eslint . --ext .ts --fix",
+      "start": "ts-node src/index.ts",
+      "typeorm": "typeorm-ts-node-commonjs"
+   },
+   "dependencies": {
+      "cors": "^2.8.5",
+      "express": "^4.18.2",
+      "express-async-errors": "^3.1.1",
+      "pg": "^8.4.0",
+      "reflect-metadata": "^0.1.13",
+      "typeorm": "0.3.11"
+   }
 }
