--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
       "lint": "eslint . --ext .ts",
       "lint-fix": "eslint . --ext .ts --fix",
       "start": "ts-node src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
+      "typeorm": "typeorm-ts-node-commonjs",
+      "typeorm:cli": "ts-node-dev ./node_modules/typeorm/cli.js"
    },
    "dependencies": {
       "cors": "^2.8.5",
